--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@jamesives/github-pages-deploy-action": "^4.1.3",
     "axios": "^0.21.1",
     "classnames": "2.2.6",
     "date-fns": "2.16.1",
